[package]
name = "byte_trie"
version = "0.1.1"
edition = "2018"

authors = ["chip reed <chip@chip.sh>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/chippers/byte_trie"
categories = ["data-structures"]
description = "A compressed trie based on bytes with some weird child node bucket sizes."

[dependencies]
serde = { version = "1.0", optional = true }
