[package]
name = "byte_trie"
version = "0.2.0"
edition = "2018"

authors = ["chip reed <chip@chip.sh>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/chippers/byte_trie"
categories = ["data-structures"]
description = "A compressed trie based on bytes with some weird child node bucket sizes."

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.2"
rand = "0.6"
serde_json = "1.0"

[[bench]]
name = "inserting"
harness = false

[[bench]]
name = "serializing"
harness = false
required-features = ["serde"]
